--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
-/*  your css code here. If applicable */
+body{
+	margin:0px;
+	padding:0px;
+	font-family:aerial-sans-serif;
+}
+
+.button{
+	height:100vh;
+	display:flex;
+	justify-content:space-around;
+	align-items:center;
+	background-color:lightblue;
+	color:white;
+}
+.btn{
+	padding:10px;
+	border-radius:20%;
+    cursor:pointer;
+	background-color:blueviolet;
+}
+.stop{
+	padding:10px;
+	border-radius:20%;
+	background-color:red;
+	cursor:pointer;
+}
